# RetroDrop

./: .gitignore  README.md
.github/workflows/: qodana_code_quality.yml
code/: CMakeLists.txt  RetroDrop.sln
code/ns-eel2/: CMakeLists.txt  nseel-compiler.c
code/vis_milk2/: AudioDeviceManager.cpp  AudioDeviceManager.h  CMakeLists.txt  Milkdrop2PcmVisualizer.cpp  milkdropfs.cpp  plugin.aps  plugin.cpp  plugin.h  plugin.rc  plugin.vcxproj  plugin.vcxproj.filters  utility.cpp
